--- a/Sisma.Industry40Test/Sisma.Industry40Test.csproj
+++ b/Sisma.Industry40Test/Sisma.Industry40Test.csproj
@@ -68,7 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Resources\MQTTClient.it-IT.md">
+    <None Include="README.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
